# faker-cli

./: Cargo.toml  README.md  debug.sh  insert.sql
src/: command.rs  generator.rs  main.rs  query.rs
