[package]
name = "faker-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Rosid <alahmadrosid@gmail.com>"]
description = "Generate fake data from cli."
readme = "README.md"
repository = "https://github.com/ahmadrosid/faker-cli"
license = "MIT OR Apache-2.0"
keywords = ["cli", "productivity"]

[dependencies]
fake = "2.4"
rand = "0.8"

[[bin]]
name = "faker-cli"
path = "src/main.rs"
